<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context="graciasalle.myappapplication.SegundActivity">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_elements">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/textOrigin"
            android:textSize="@dimen/title"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_elements"
            android:gravity="center"/>
        <View
            android:background="@color/colorPrimaryDark"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/margin_elements"
        />
        <Spinner android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:id="@+id/spinners"
            android:layout_marginTop="@dimen/margin_elements"/>

        <ImageView
            android:layout_marginTop="@dimen/margin_elements"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/banderaOrigen"
            android:src="@drawable/ic_usa"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/moneyOrigin"
            android:textSize="@dimen/title"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_elements"
            android:gravity="center"/>

        <View
            android:background="@color/colorPrimaryDark"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/margin_elements"
            />

        <Spinner android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:entries="@array/origin_array"
            android:id="@+id/spinnerMoney"
            android:layout_marginTop="@dimen/margin_elements"/>


        <TextView
            android:layout_marginTop="@dimen/margin_elements"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/textDestination"
            android:textSize="@dimen/title"
            android:textStyle="bold"
            android:gravity="center"/>

        <View
            android:background="@color/colorPrimaryDark"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/margin_elements"
            />
        <Spinner android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:id="@+id/spinnersDestination"
            android:layout_marginTop="@dimen/margin_elements"/>
        <ImageView
            android:layout_marginTop="@dimen/margin_elements"
            android:id="@+id/flag"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:src="@drawable/ic_launcher"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/moneyDestination"
            android:textSize="@dimen/title"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_elements"
            android:gravity="center"/>
        <View
            android:background="@color/colorPrimaryDark"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/margin_elements"
            />

        <Spinner android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:entries="@array/origin_array"
            android:id="@+id/spinnerMoney_2"
            android:layout_marginTop="@dimen/margin_elements"/>
        </LinearLayout>
    </ScrollView>
    <View
        android:background="@color/colorPrimaryDark"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/margin_elements"
        />
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_elements">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Quantity"
            android:textStyle="bold"
            android:textSize="@dimen/subtitle"
            android:textColor="@color/textColor"
            android:layout_marginTop="@dimen/margin_elements"
            />
        <EditText
            android:inputType="number"
            android:id="@+id/quantity"
            android:layout_width="612dp"
            android:layout_height="wrap_content"
            android:hint="@string/writeMessage"
            android:layout_marginTop="@dimen/margin_elements"
            android:layout_marginLeft="64dp"/>
        <View
            android:background="@color/colorPrimaryDark"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/margin_elements"
            />

    </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_elements">

        <Button
            android:textSize="@dimen/titlePrincipal"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/margin_elements"
            android:text="@string/buttonStart"
            android:onClick="startToExchange"/>
        <Button
            android:layout_marginLeft="@dimen/margin_elements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_elements"
            android:text="@string/buttonReset"
            android:onClick="startToResetExchange"
            android:textSize="@dimen/titlePrincipal"
            />
        </LinearLayout>


  </LinearLayout>
